Implement getWorkflowStatuses
