# plugins/orchestrator-common/api/openapi.yaml
@@ -135,6 +135,20 @@ paths:
                   message:
                     type: string
                     description: Error message
+  /v2/workflows/statuses:
+    get:
+      operationId: getWorkflowStatuses
+      summary: Get workflow status list
+      description: Retrieve an array of workflow statuses as string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
 components:
   schemas:
     WorkflowOverviewListResultDTO:
